Analizador Lexico/src/dataModel/y.output
   0  $accept : programa $end

   1  programa : sentencias

   2  sentencias : sentencia
   3             | sentencias sentencia

   4  sentencia : declaracion
   5            | asignacion ';'

   6  $$1 :

   7  sentencia : $$1 seleccion
   8            | bucle
   9            | impresion
  10            | ';' error

  11  declaracion : FLOAT variables ';'
  12              | FLOAT ';' error
  13              | VECTOR vector ';'
  14              | VECTOR vector error

  15  vector : IDENTIFICADOR '[' expresion ']'
  16         | error

  17  variables : IDENTIFICADOR
  18            | variables ',' IDENTIFICADOR
  19            | error

  20  asignacion : IDENTIFICADOR ASIG expresion
  21             | IDENTIFICADOR '[' expresion ']' ASIG expresion

  22  expresion : numero
  23            | operacionAritmetica
  24            | variable

  25  numero : FLOAT
  26         | INT

  27  operacionAritmetica : variable operador variable
  28                      | variable operador numero
  29                      | numero operador variable
  30                      | numero operador numero

  31  variable : IDENTIFICADOR
  32           | IDENTIFICADOR '[' expresion ']'

  33  operador : '<'
  34           | "MENOR_IGUAL"
  35           | '>'
  36           | "MAYOR_IGUAL"
  37           | '='
  38           | "DISTINTO"
  39           | error

  40  seleccion : IF '(' condicion ')' THEN '{' sentencias '}'
  41            | IF '(' condicion ')' THEN '{' sentencias '}' ELSE '{' sentencias '}'
  42            | IF '(' condicion ')' THEN '{' sentencias '}' ELSE
  43            | IF '(' condicion ')' '{' sentencias '}' ELSE
  44            | IF '(' condicion ')' THEN
  45            | error

  46  condicion : expresion operador expresion
  47            | error

  48  impresion : PRINT '(' CADENA ')' ';'
  49            | PRINT '(' CADENA ')' error
  50            | PRINT '(' ';' error
  51            | PRINT ';' error

  52  bucle : FOR '(' INT IDENTIFICADOR '=' INT IDENTIFICADOR operador expresion IDENTIFICADOR ')' '{' sentencias '}'

state 0
	$accept : . programa $end  (0)
	$$1 : .  (6)

	PRINT  shift 1
	IDENTIFICADOR  shift 2
	VECTOR  shift 3
	FLOAT  shift 4
	FOR  shift 5
	';'  shift 6
	error  reduce 6
	IF  reduce 6

	programa  goto 7
	sentencias  goto 8
	sentencia  goto 9
	declaracion  goto 10
	asignacion  goto 11
	$$1  goto 12
	bucle  goto 13
	impresion  goto 14


state 1
	impresion : PRINT . '(' CADENA ')' ';'  (48)
	impresion : PRINT . '(' CADENA ')' error  (49)
	impresion : PRINT . '(' ';' error  (50)
	impresion : PRINT . ';' error  (51)

	';'  shift 15
	'('  shift 16
	.  error


state 2
	asignacion : IDENTIFICADOR . ASIG expresion  (20)
	asignacion : IDENTIFICADOR . '[' expresion ']' ASIG expresion  (21)

	ASIG  shift 17
	'['  shift 18
	.  error


state 3
	declaracion : VECTOR . vector ';'  (13)
	declaracion : VECTOR . vector error  (14)

	error  shift 19
	IDENTIFICADOR  shift 20
	.  error

	vector  goto 21


state 4
	declaracion : FLOAT . variables ';'  (11)
	declaracion : FLOAT . ';' error  (12)

	error  shift 22
	IDENTIFICADOR  shift 23
	';'  shift 24
	.  error

	variables  goto 25


state 5
	bucle : FOR . '(' INT IDENTIFICADOR '=' INT IDENTIFICADOR operador expresion IDENTIFICADOR ')' '{' sentencias '}'  (52)

	'('  shift 26
	.  error


state 6
	sentencia : ';' . error  (10)

	error  shift 27
	.  error


state 7
	$accept : programa . $end  (0)

	$end  accept


state 8
	programa : sentencias .  (1)
	sentencias : sentencias . sentencia  (3)
	$$1 : .  (6)

	PRINT  shift 1
	IDENTIFICADOR  shift 2
	VECTOR  shift 3
	FLOAT  shift 4
	FOR  shift 5
	';'  shift 6
	$end  reduce 1
	error  reduce 6
	IF  reduce 6

	sentencia  goto 28
	declaracion  goto 10
	asignacion  goto 11
	$$1  goto 12
	bucle  goto 13
	impresion  goto 14


state 9
	sentencias : sentencia .  (2)

	.  reduce 2


state 10
	sentencia : declaracion .  (4)

	.  reduce 4


state 11
	sentencia : asignacion . ';'  (5)

	';'  shift 29
	.  error


state 12
	sentencia : $$1 . seleccion  (7)

	error  shift 30
	IF  shift 31
	.  error

	seleccion  goto 32


state 13
	sentencia : bucle .  (8)

	.  reduce 8


state 14
	sentencia : impresion .  (9)

	.  reduce 9


state 15
	impresion : PRINT ';' . error  (51)

	error  shift 33
	.  error


state 16
	impresion : PRINT '(' . CADENA ')' ';'  (48)
	impresion : PRINT '(' . CADENA ')' error  (49)
	impresion : PRINT '(' . ';' error  (50)

	CADENA  shift 34
	';'  shift 35
	.  error


state 17
	asignacion : IDENTIFICADOR ASIG . expresion  (20)

	IDENTIFICADOR  shift 36
	INT  shift 37
	FLOAT  shift 38
	.  error

	expresion  goto 39
	numero  goto 40
	operacionAritmetica  goto 41
	variable  goto 42


state 18
	asignacion : IDENTIFICADOR '[' . expresion ']' ASIG expresion  (21)

	IDENTIFICADOR  shift 36
	INT  shift 37
	FLOAT  shift 38
	.  error

	expresion  goto 43
	numero  goto 40
	operacionAritmetica  goto 41
	variable  goto 42


state 19
	vector : error .  (16)

	.  reduce 16


state 20
	vector : IDENTIFICADOR . '[' expresion ']'  (15)

	'['  shift 44
	.  error


state 21
	declaracion : VECTOR vector . ';'  (13)
	declaracion : VECTOR vector . error  (14)

	error  shift 45
	';'  shift 46
	.  error


state 22
	variables : error .  (19)

	.  reduce 19


state 23
	variables : IDENTIFICADOR .  (17)

	.  reduce 17


state 24
	declaracion : FLOAT ';' . error  (12)

	error  shift 47
	.  error


state 25
	declaracion : FLOAT variables . ';'  (11)
	variables : variables . ',' IDENTIFICADOR  (18)

	';'  shift 48
	','  shift 49
	.  error


state 26
	bucle : FOR '(' . INT IDENTIFICADOR '=' INT IDENTIFICADOR operador expresion IDENTIFICADOR ')' '{' sentencias '}'  (52)

	INT  shift 50
	.  error


state 27
	sentencia : ';' error .  (10)

	.  reduce 10


state 28
	sentencias : sentencias sentencia .  (3)

	.  reduce 3


state 29
	sentencia : asignacion ';' .  (5)

	.  reduce 5


state 30
	seleccion : error .  (45)

	.  reduce 45


state 31
	seleccion : IF . '(' condicion ')' THEN '{' sentencias '}'  (40)
	seleccion : IF . '(' condicion ')' THEN '{' sentencias '}' ELSE '{' sentencias '}'  (41)
	seleccion : IF . '(' condicion ')' THEN '{' sentencias '}' ELSE  (42)
	seleccion : IF . '(' condicion ')' '{' sentencias '}' ELSE  (43)
	seleccion : IF . '(' condicion ')' THEN  (44)

	'('  shift 51
	.  error


state 32
	sentencia : $$1 seleccion .  (7)

	.  reduce 7


state 33
	impresion : PRINT ';' error .  (51)

	.  reduce 51


state 34
	impresion : PRINT '(' CADENA . ')' ';'  (48)
	impresion : PRINT '(' CADENA . ')' error  (49)

	')'  shift 52
	.  error


state 35
	impresion : PRINT '(' ';' . error  (50)

	error  shift 53
	.  error


state 36
	variable : IDENTIFICADOR .  (31)
	variable : IDENTIFICADOR . '[' expresion ']'  (32)

	'['  shift 54
	error  reduce 31
	IDENTIFICADOR  reduce 31
	';'  reduce 31
	']'  reduce 31
	'<'  reduce 31
	"MENOR_IGUAL"  reduce 31
	'>'  reduce 31
	"MAYOR_IGUAL"  reduce 31
	'='  reduce 31
	"DISTINTO"  reduce 31
	')'  reduce 31


state 37
	numero : INT .  (26)

	.  reduce 26


state 38
	numero : FLOAT .  (25)

	.  reduce 25


state 39
	asignacion : IDENTIFICADOR ASIG expresion .  (20)

	.  reduce 20


40: shift/reduce conflict (shift 55, reduce 22) on error
40: shift/reduce conflict (shift 56, reduce 22) on '<'
40: shift/reduce conflict (shift 57, reduce 22) on "MENOR_IGUAL"
40: shift/reduce conflict (shift 58, reduce 22) on '>'
40: shift/reduce conflict (shift 59, reduce 22) on "MAYOR_IGUAL"
40: shift/reduce conflict (shift 60, reduce 22) on '='
40: shift/reduce conflict (shift 61, reduce 22) on "DISTINTO"
state 40
	expresion : numero .  (22)
	operacionAritmetica : numero . operador variable  (29)
	operacionAritmetica : numero . operador numero  (30)

	error  shift 55
	'<'  shift 56
	"MENOR_IGUAL"  shift 57
	'>'  shift 58
	"MAYOR_IGUAL"  shift 59
	'='  shift 60
	"DISTINTO"  shift 61
	IDENTIFICADOR  reduce 22
	';'  reduce 22
	']'  reduce 22
	')'  reduce 22

	operador  goto 62


state 41
	expresion : operacionAritmetica .  (23)

	.  reduce 23


42: shift/reduce conflict (shift 55, reduce 24) on error
42: shift/reduce conflict (shift 56, reduce 24) on '<'
42: shift/reduce conflict (shift 57, reduce 24) on "MENOR_IGUAL"
42: shift/reduce conflict (shift 58, reduce 24) on '>'
42: shift/reduce conflict (shift 59, reduce 24) on "MAYOR_IGUAL"
42: shift/reduce conflict (shift 60, reduce 24) on '='
42: shift/reduce conflict (shift 61, reduce 24) on "DISTINTO"
state 42
	expresion : variable .  (24)
	operacionAritmetica : variable . operador variable  (27)
	operacionAritmetica : variable . operador numero  (28)

	error  shift 55
	'<'  shift 56
	"MENOR_IGUAL"  shift 57
	'>'  shift 58
	"MAYOR_IGUAL"  shift 59
	'='  shift 60
	"DISTINTO"  shift 61
	IDENTIFICADOR  reduce 24
	';'  reduce 24
	']'  reduce 24
	')'  reduce 24

	operador  goto 63


state 43
	asignacion : IDENTIFICADOR '[' expresion . ']' ASIG expresion  (21)

	']'  shift 64
	.  error


state 44
	vector : IDENTIFICADOR '[' . expresion ']'  (15)

	IDENTIFICADOR  shift 36
	INT  shift 37
	FLOAT  shift 38
	.  error

	expresion  goto 65
	numero  goto 40
	operacionAritmetica  goto 41
	variable  goto 42


state 45
	declaracion : VECTOR vector error .  (14)

	.  reduce 14


state 46
	declaracion : VECTOR vector ';' .  (13)

	.  reduce 13


state 47
	declaracion : FLOAT ';' error .  (12)

	.  reduce 12


state 48
	declaracion : FLOAT variables ';' .  (11)

	.  reduce 11


state 49
	variables : variables ',' . IDENTIFICADOR  (18)

	IDENTIFICADOR  shift 66
	.  error


state 50
	bucle : FOR '(' INT . IDENTIFICADOR '=' INT IDENTIFICADOR operador expresion IDENTIFICADOR ')' '{' sentencias '}'  (52)

	IDENTIFICADOR  shift 67
	.  error


state 51
	seleccion : IF '(' . condicion ')' THEN '{' sentencias '}'  (40)
	seleccion : IF '(' . condicion ')' THEN '{' sentencias '}' ELSE '{' sentencias '}'  (41)
	seleccion : IF '(' . condicion ')' THEN '{' sentencias '}' ELSE  (42)
	seleccion : IF '(' . condicion ')' '{' sentencias '}' ELSE  (43)
	seleccion : IF '(' . condicion ')' THEN  (44)

	error  shift 68
	IDENTIFICADOR  shift 36
	INT  shift 37
	FLOAT  shift 38
	.  error

	expresion  goto 69
	numero  goto 40
	operacionAritmetica  goto 41
	variable  goto 42
	condicion  goto 70


state 52
	impresion : PRINT '(' CADENA ')' . ';'  (48)
	impresion : PRINT '(' CADENA ')' . error  (49)

	error  shift 71
	';'  shift 72
	.  error


state 53
	impresion : PRINT '(' ';' error .  (50)

	.  reduce 50


state 54
	variable : IDENTIFICADOR '[' . expresion ']'  (32)

	IDENTIFICADOR  shift 36
	INT  shift 37
	FLOAT  shift 38
	.  error

	expresion  goto 73
	numero  goto 40
	operacionAritmetica  goto 41
	variable  goto 42


state 55
	operador : error .  (39)

	.  reduce 39


state 56
	operador : '<' .  (33)

	.  reduce 33


state 57
	operador : "MENOR_IGUAL" .  (34)

	.  reduce 34


state 58
	operador : '>' .  (35)

	.  reduce 35


state 59
	operador : "MAYOR_IGUAL" .  (36)

	.  reduce 36


state 60
	operador : '=' .  (37)

	.  reduce 37


state 61
	operador : "DISTINTO" .  (38)

	.  reduce 38


state 62
	operacionAritmetica : numero operador . variable  (29)
	operacionAritmetica : numero operador . numero  (30)

	IDENTIFICADOR  shift 36
	INT  shift 37
	FLOAT  shift 38
	.  error

	numero  goto 74
	variable  goto 75


state 63
	operacionAritmetica : variable operador . variable  (27)
	operacionAritmetica : variable operador . numero  (28)

	IDENTIFICADOR  shift 36
	INT  shift 37
	FLOAT  shift 38
	.  error

	numero  goto 76
	variable  goto 77


state 64
	asignacion : IDENTIFICADOR '[' expresion ']' . ASIG expresion  (21)

	ASIG  shift 78
	.  error


state 65
	vector : IDENTIFICADOR '[' expresion . ']'  (15)

	']'  shift 79
	.  error


state 66
	variables : variables ',' IDENTIFICADOR .  (18)

	.  reduce 18


state 67
	bucle : FOR '(' INT IDENTIFICADOR . '=' INT IDENTIFICADOR operador expresion IDENTIFICADOR ')' '{' sentencias '}'  (52)

	'='  shift 80
	.  error


state 68
	condicion : error .  (47)

	.  reduce 47


state 69
	condicion : expresion . operador expresion  (46)

	error  shift 55
	'<'  shift 56
	"MENOR_IGUAL"  shift 57
	'>'  shift 58
	"MAYOR_IGUAL"  shift 59
	'='  shift 60
	"DISTINTO"  shift 61
	.  error

	operador  goto 81


state 70
	seleccion : IF '(' condicion . ')' THEN '{' sentencias '}'  (40)
	seleccion : IF '(' condicion . ')' THEN '{' sentencias '}' ELSE '{' sentencias '}'  (41)
	seleccion : IF '(' condicion . ')' THEN '{' sentencias '}' ELSE  (42)
	seleccion : IF '(' condicion . ')' '{' sentencias '}' ELSE  (43)
	seleccion : IF '(' condicion . ')' THEN  (44)

	')'  shift 82
	.  error


state 71
	impresion : PRINT '(' CADENA ')' error .  (49)

	.  reduce 49


state 72
	impresion : PRINT '(' CADENA ')' ';' .  (48)

	.  reduce 48


state 73
	variable : IDENTIFICADOR '[' expresion . ']'  (32)

	']'  shift 83
	.  error


state 74
	operacionAritmetica : numero operador numero .  (30)

	.  reduce 30


state 75
	operacionAritmetica : numero operador variable .  (29)

	.  reduce 29


state 76
	operacionAritmetica : variable operador numero .  (28)

	.  reduce 28


state 77
	operacionAritmetica : variable operador variable .  (27)

	.  reduce 27


state 78
	asignacion : IDENTIFICADOR '[' expresion ']' ASIG . expresion  (21)

	IDENTIFICADOR  shift 36
	INT  shift 37
	FLOAT  shift 38
	.  error

	expresion  goto 84
	numero  goto 40
	operacionAritmetica  goto 41
	variable  goto 42


state 79
	vector : IDENTIFICADOR '[' expresion ']' .  (15)

	.  reduce 15


state 80
	bucle : FOR '(' INT IDENTIFICADOR '=' . INT IDENTIFICADOR operador expresion IDENTIFICADOR ')' '{' sentencias '}'  (52)

	INT  shift 85
	.  error


state 81
	condicion : expresion operador . expresion  (46)

	IDENTIFICADOR  shift 36
	INT  shift 37
	FLOAT  shift 38
	.  error

	expresion  goto 86
	numero  goto 40
	operacionAritmetica  goto 41
	variable  goto 42


state 82
	seleccion : IF '(' condicion ')' . THEN '{' sentencias '}'  (40)
	seleccion : IF '(' condicion ')' . THEN '{' sentencias '}' ELSE '{' sentencias '}'  (41)
	seleccion : IF '(' condicion ')' . THEN '{' sentencias '}' ELSE  (42)
	seleccion : IF '(' condicion ')' . '{' sentencias '}' ELSE  (43)
	seleccion : IF '(' condicion ')' . THEN  (44)

	THEN  shift 87
	'{'  shift 88
	.  error


state 83
	variable : IDENTIFICADOR '[' expresion ']' .  (32)

	.  reduce 32


state 84
	asignacion : IDENTIFICADOR '[' expresion ']' ASIG expresion .  (21)

	.  reduce 21


state 85
	bucle : FOR '(' INT IDENTIFICADOR '=' INT . IDENTIFICADOR operador expresion IDENTIFICADOR ')' '{' sentencias '}'  (52)

	IDENTIFICADOR  shift 89
	.  error


state 86
	condicion : expresion operador expresion .  (46)

	.  reduce 46


state 87
	seleccion : IF '(' condicion ')' THEN . '{' sentencias '}'  (40)
	seleccion : IF '(' condicion ')' THEN . '{' sentencias '}' ELSE '{' sentencias '}'  (41)
	seleccion : IF '(' condicion ')' THEN . '{' sentencias '}' ELSE  (42)
	seleccion : IF '(' condicion ')' THEN .  (44)

	'{'  shift 90
	$end  reduce 44
	error  reduce 44
	IF  reduce 44
	PRINT  reduce 44
	IDENTIFICADOR  reduce 44
	VECTOR  reduce 44
	FLOAT  reduce 44
	FOR  reduce 44
	';'  reduce 44
	'}'  reduce 44


state 88
	seleccion : IF '(' condicion ')' '{' . sentencias '}' ELSE  (43)
	$$1 : .  (6)

	PRINT  shift 1
	IDENTIFICADOR  shift 2
	VECTOR  shift 3
	FLOAT  shift 4
	FOR  shift 5
	';'  shift 6
	error  reduce 6
	IF  reduce 6

	sentencias  goto 91
	sentencia  goto 9
	declaracion  goto 10
	asignacion  goto 11
	$$1  goto 12
	bucle  goto 13
	impresion  goto 14


state 89
	bucle : FOR '(' INT IDENTIFICADOR '=' INT IDENTIFICADOR . operador expresion IDENTIFICADOR ')' '{' sentencias '}'  (52)

	error  shift 55
	'<'  shift 56
	"MENOR_IGUAL"  shift 57
	'>'  shift 58
	"MAYOR_IGUAL"  shift 59
	'='  shift 60
	"DISTINTO"  shift 61
	.  error

	operador  goto 92


state 90
	seleccion : IF '(' condicion ')' THEN '{' . sentencias '}'  (40)
	seleccion : IF '(' condicion ')' THEN '{' . sentencias '}' ELSE '{' sentencias '}'  (41)
	seleccion : IF '(' condicion ')' THEN '{' . sentencias '}' ELSE  (42)
	$$1 : .  (6)

	PRINT  shift 1
	IDENTIFICADOR  shift 2
	VECTOR  shift 3
	FLOAT  shift 4
	FOR  shift 5
	';'  shift 6
	error  reduce 6
	IF  reduce 6

	sentencias  goto 93
	sentencia  goto 9
	declaracion  goto 10
	asignacion  goto 11
	$$1  goto 12
	bucle  goto 13
	impresion  goto 14


state 91
	sentencias : sentencias . sentencia  (3)
	seleccion : IF '(' condicion ')' '{' sentencias . '}' ELSE  (43)
	$$1 : .  (6)

	PRINT  shift 1
	IDENTIFICADOR  shift 2
	VECTOR  shift 3
	FLOAT  shift 4
	FOR  shift 5
	';'  shift 6
	'}'  shift 94
	error  reduce 6
	IF  reduce 6

	sentencia  goto 28
	declaracion  goto 10
	asignacion  goto 11
	$$1  goto 12
	bucle  goto 13
	impresion  goto 14


state 92
	bucle : FOR '(' INT IDENTIFICADOR '=' INT IDENTIFICADOR operador . expresion IDENTIFICADOR ')' '{' sentencias '}'  (52)

	IDENTIFICADOR  shift 36
	INT  shift 37
	FLOAT  shift 38
	.  error

	expresion  goto 95
	numero  goto 40
	operacionAritmetica  goto 41
	variable  goto 42


state 93
	sentencias : sentencias . sentencia  (3)
	seleccion : IF '(' condicion ')' THEN '{' sentencias . '}'  (40)
	seleccion : IF '(' condicion ')' THEN '{' sentencias . '}' ELSE '{' sentencias '}'  (41)
	seleccion : IF '(' condicion ')' THEN '{' sentencias . '}' ELSE  (42)
	$$1 : .  (6)

	PRINT  shift 1
	IDENTIFICADOR  shift 2
	VECTOR  shift 3
	FLOAT  shift 4
	FOR  shift 5
	';'  shift 6
	'}'  shift 96
	error  reduce 6
	IF  reduce 6

	sentencia  goto 28
	declaracion  goto 10
	asignacion  goto 11
	$$1  goto 12
	bucle  goto 13
	impresion  goto 14


state 94
	seleccion : IF '(' condicion ')' '{' sentencias '}' . ELSE  (43)

	ELSE  shift 97
	.  error


state 95
	bucle : FOR '(' INT IDENTIFICADOR '=' INT IDENTIFICADOR operador expresion . IDENTIFICADOR ')' '{' sentencias '}'  (52)

	IDENTIFICADOR  shift 98
	.  error


state 96
	seleccion : IF '(' condicion ')' THEN '{' sentencias '}' .  (40)
	seleccion : IF '(' condicion ')' THEN '{' sentencias '}' . ELSE '{' sentencias '}'  (41)
	seleccion : IF '(' condicion ')' THEN '{' sentencias '}' . ELSE  (42)

	ELSE  shift 99
	$end  reduce 40
	error  reduce 40
	IF  reduce 40
	PRINT  reduce 40
	IDENTIFICADOR  reduce 40
	VECTOR  reduce 40
	FLOAT  reduce 40
	FOR  reduce 40
	';'  reduce 40
	'}'  reduce 40


state 97
	seleccion : IF '(' condicion ')' '{' sentencias '}' ELSE .  (43)

	.  reduce 43


state 98
	bucle : FOR '(' INT IDENTIFICADOR '=' INT IDENTIFICADOR operador expresion IDENTIFICADOR . ')' '{' sentencias '}'  (52)

	')'  shift 100
	.  error


state 99
	seleccion : IF '(' condicion ')' THEN '{' sentencias '}' ELSE . '{' sentencias '}'  (41)
	seleccion : IF '(' condicion ')' THEN '{' sentencias '}' ELSE .  (42)

	'{'  shift 101
	$end  reduce 42
	error  reduce 42
	IF  reduce 42
	PRINT  reduce 42
	IDENTIFICADOR  reduce 42
	VECTOR  reduce 42
	FLOAT  reduce 42
	FOR  reduce 42
	';'  reduce 42
	'}'  reduce 42


state 100
	bucle : FOR '(' INT IDENTIFICADOR '=' INT IDENTIFICADOR operador expresion IDENTIFICADOR ')' . '{' sentencias '}'  (52)

	'{'  shift 102
	.  error


state 101
	seleccion : IF '(' condicion ')' THEN '{' sentencias '}' ELSE '{' . sentencias '}'  (41)
	$$1 : .  (6)

	PRINT  shift 1
	IDENTIFICADOR  shift 2
	VECTOR  shift 3
	FLOAT  shift 4
	FOR  shift 5
	';'  shift 6
	error  reduce 6
	IF  reduce 6

	sentencias  goto 103
	sentencia  goto 9
	declaracion  goto 10
	asignacion  goto 11
	$$1  goto 12
	bucle  goto 13
	impresion  goto 14


state 102
	bucle : FOR '(' INT IDENTIFICADOR '=' INT IDENTIFICADOR operador expresion IDENTIFICADOR ')' '{' . sentencias '}'  (52)
	$$1 : .  (6)

	PRINT  shift 1
	IDENTIFICADOR  shift 2
	VECTOR  shift 3
	FLOAT  shift 4
	FOR  shift 5
	';'  shift 6
	error  reduce 6
	IF  reduce 6

	sentencias  goto 104
	sentencia  goto 9
	declaracion  goto 10
	asignacion  goto 11
	$$1  goto 12
	bucle  goto 13
	impresion  goto 14


state 103
	sentencias : sentencias . sentencia  (3)
	seleccion : IF '(' condicion ')' THEN '{' sentencias '}' ELSE '{' sentencias . '}'  (41)
	$$1 : .  (6)

	PRINT  shift 1
	IDENTIFICADOR  shift 2
	VECTOR  shift 3
	FLOAT  shift 4
	FOR  shift 5
	';'  shift 6
	'}'  shift 105
	error  reduce 6
	IF  reduce 6

	sentencia  goto 28
	declaracion  goto 10
	asignacion  goto 11
	$$1  goto 12
	bucle  goto 13
	impresion  goto 14


state 104
	sentencias : sentencias . sentencia  (3)
	bucle : FOR '(' INT IDENTIFICADOR '=' INT IDENTIFICADOR operador expresion IDENTIFICADOR ')' '{' sentencias . '}'  (52)
	$$1 : .  (6)

	PRINT  shift 1
	IDENTIFICADOR  shift 2
	VECTOR  shift 3
	FLOAT  shift 4
	FOR  shift 5
	';'  shift 6
	'}'  shift 106
	error  reduce 6
	IF  reduce 6

	sentencia  goto 28
	declaracion  goto 10
	asignacion  goto 11
	$$1  goto 12
	bucle  goto 13
	impresion  goto 14


state 105
	seleccion : IF '(' condicion ')' THEN '{' sentencias '}' ELSE '{' sentencias '}' .  (41)

	.  reduce 41


state 106
	bucle : FOR '(' INT IDENTIFICADOR '=' INT IDENTIFICADOR operador expresion IDENTIFICADOR ')' '{' sentencias '}' .  (52)

	.  reduce 52


State 40 contains 7 shift/reduce conflicts.
State 42 contains 7 shift/reduce conflicts.


31 terminals, 18 nonterminals
53 grammar rules, 107 states
